--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100wh;
+    height: 100vh;
     width: 100%;
     margin-top: 100px;
 }
