--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -9,10 +9,10 @@
     background-color: #e0e1e6;
     color: #888;
     outline: 1px solid #888;
-}
-
-.operator {
+  }
+  .operator {
     background-color: #fe9241;
-    color: white;
-}
+    color: #fff;
+  }
 
+  
