--- a/src/components/ClearButton.css
+++ b/src/components/ClearButton.css
@@ -8,7 +8,8 @@
     font-size: 1.4em;
     outline: 1px solid #888;
     height: 4em;
-    background-color: #c5c3cd;
+    background-color: red;
+    color: white;
   }
 
   
