--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -6,12 +6,12 @@
     align-items: center;
     font-weight: lighter;
     font-size: 1.5em;
-    background-color: #e0e1e6;
-    color: #888;
+    background-color: blue;
+    color: white;
     outline: 1px solid #888;
   }
   .operator {
-    background-color: #fe9241;
+    background-color: skyblue;
     color: #fff;
   }
 
